--- a/webparts.html
+++ b/webparts.html
@@ -124,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="mb-5">
                           
                            <h4 class="my-2"><a href="./event-single.html" class="text-reset">Lista</a></h4>
-                           <small>A partir de una tabla podemos crear un CRUD.</small>
+                           <small>A partir de una tabla podemos crear un CRUD(Create-Read-Update-Delete).</small>
                         </div>
                         <div class="d-flex justify-content-between w-100 mt-auto">
                            <small>MVC Net Core 8</small>
